--- a/css/main.css
+++ b/css/main.css
@@ -72,9 +72,16 @@ a:hover {
   display: block;
 }
 
+@media (min-width: 480px){
+  button{ display: none;}
+}
+
 @media (max-width: 480px){
   .nav li {
     display: block;
+  }
+  .nav-main{
+      display: none;
   }
 }
 
